--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "cyddalupan/tic-tac-toe-pattern-checker",
     "description": "Check an 0-8 array for pattern if it completes a tic Tac toe.",
     "type": "composer-plugin",
+    "license": "MIT",
     "authors": [
         {
             "name": "Cyd Dalupan",
