--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "stable",
     "autoload": {
         "psr-0": {
-            "Cyddalupan\\TicTacToeChecker": ""
+            "Cyddalupan\\TicTacToeChecker": "src/"
         }
     },
     "extra": {
