--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "cyddalupan/tic-tac-toe-pattern-checker",
     "description": "Check an 0-8 array for pattern if it completes a tic Tac toe.",
     "keywords": ["tic tac toe","check pattern"],
+    "type": "library",
     "license": "MIT",
     "version" : "1.0.2",
     "authors": [
